# terminal_style

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: 10_print.rs  basic.rs  color.rs  format.rs  gradient.rs  palettes.rs  readme.rs  user_input.rs
src/color/: ansi.rs  error.rs  hex.rs  mod.rs  rgb.rs  validate.rs
src/format/: color_apply.rs  colors.rs  mod.rs  stylable.rs  style.rs  text.rs
tests/: color.rs  format.rs
