[package]
name = "terminal_style"
version = "0.2.1"
edition = "2021"

description = "A minimal library for styling terminal text using ANSI escape codes."
license = "MIT"
documentation = "https://docs.rs/terminal_style"
homepage = "https://github.com/ronilan/terminal_style"
repository = "https://github.com/ronilan/terminal_style"

[dev-dependencies]
rand = "0.8"